--- a/billing_a/cup10602.html
+++ b/billing_a/cup10602.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -58,6 +57,7 @@
 							<li><a href="#" class="ty2">Guide</a></li>
 							<li><a href="#" class="ty3">Learn &amp; Support</a></li>
 							<li><a href="#" class="ty4">Shortcut Key (Tab+s)</a></li>
+							<li><a href="#" class="logout">Logout</a></li>
 						</ul>
 						<button type="button" class="btn close">Close</button>
 					</div>
@@ -76,7 +76,7 @@
 									<li><a href="#" data-name="OrganizationList">Organization List</a></li>
 									<li><a href="#" data-name="Organization">Organization</a></li>
 								</ul>
-								<button type="button" class="clip on"></button>
+								<button type="button" class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit ty2">Subscription</div>
@@ -160,7 +160,7 @@
 							<div class="serviceCode">
 								<div class="srvNum" id="">
 									<div class="inputBox inpNone">
-										<input type="text" name="cup10602_billingPolicyIDLb" class="inp" id="cup10602_billingPolicyIDLb" readonly="readonly" value="P10000001">
+										<input type="text" name="cup10602_billingPolicyIDLb" class="inp" id="cup10602_billingPolicyIDLb" readonly="readonly" value="P10000001" tabindex="-1">
 									</div>
 								</div>
 								<div class="actChk">
@@ -182,7 +182,9 @@
 												<dt id="cup10602_billingPolicyNameLb">Billing Policy Name</dt>
 												<dd>
 													<div class="inputBox full">
-														<input type="text" name="cup10602_billingPolicyName" class="inp Mandate" id="cup10602_billingPolicyName" placeholder="" maxlength="80">
+														<!-- 2019-02-20 수정 -->
+														<input type="text" name="cup10602_billingPolicyName" class="inp Mandate inputFocus" id="cup10602_billingPolicyName" placeholder="" maxlength="80">
+														<!--// 2019-02-20 수정 -->
 														<button type="button" class="inpReset"></button>
 													</div>
 												</dd>
@@ -297,11 +299,13 @@
 															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
 														</select>
 													</div>
+													<!-- 2019-02-21 수정 -->
 													<div class="inputBox count">
 														<button type="button" class="plus"><span>Plus</span></button>
-														<input type="number" name="cup10602_billingStartDay" class="inp Edit_Count" id="cup10602_billingStartDay" min="0" placeholder='Day(s)'>
+														<input type="number" name="cup10602_billingStartDay" class="inp Edit_Count" id="cup10602_billingStartDay" min="0" placeholder="Day(s)" maxlength="50" @@etc>
 														<button type="button" class="minus"><span>Minus</span></button>
 													</div>
+													<!--// 2019-02-21 수정 -->
 													<div class="tooltip">
 														<div class="tips">
 															<strong class="tit">Billing Started on</strong>
@@ -324,11 +328,13 @@
 															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
 														</select>
 													</div>
+													<!-- 2019-02-21 수정 -->
 													<div class="inputBox count">
 														<button type="button" class="plus"><span>Plus</span></button>
-														<input type="number" name="cup10602_creditTermDay" class="inp Edit_Count" id="cup10602_creditTermDay" min="0" placeholder='Day(s)'>
+														<input type="number" name="cup10602_creditTermDay" class="inp Edit_Count" id="cup10602_creditTermDay" min="0" placeholder="Day(s)" maxlength="50" @@etc>
 														<button type="button" class="minus"><span>Minus</span></button>
 													</div>
+													<!--// 2019-02-21 수정 -->
 													<div class="tooltip">
 														<div class="tips">
 															<strong class="tit">Credit Term</strong>
@@ -351,11 +357,13 @@
 															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
 														</select>
 													</div>
+													<!-- 2019-02-21 수정 -->
 													<div class="inputBox count">
 														<button type="button" class="plus"><span>Plus</span></button>
-														<input type="number" name="cup10602_invoiceStartDay" class="inp Edit_Count" id="cup10602_invoiceStartDay" min="0" placeholder='Day(s)'>
+														<input type="number" name="cup10602_invoiceStartDay" class="inp Edit_Count" id="cup10602_invoiceStartDay" min="0" placeholder="Day(s)" maxlength="50" @@etc>
 														<button type="button" class="minus"><span>Minus</span></button>
 													</div>
+													<!--// 2019-02-21 수정 -->
 													<div class="tooltip">
 														<div class="tips">
 															<strong class="tit">Invoice Started on</strong>
@@ -409,10 +417,10 @@
 										<dd>
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10602_createDate" class="inp Readonly" id="cup10602_createDate" value="12-14-2018" readonly />
+													<input type="text" name="cup10602_createDate" class="inp Readonly" id="cup10602_createDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10602_createTime" class="inp Readonly" id="cup10602_createTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="cup10602_createTime" class="inp Readonly" id="cup10602_createTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<div class="ele">
@@ -420,7 +428,7 @@
 													<div class="thumb">
 														<img src="../static/images/common/icon/icon_person_small.png" alt="" name="cup10602_createdByPhotoUrl" id="cup10602_createdByPhotoUrl" />
 													</div>
-													<input type="text" name="cup10602_createdBy" class="inp Readonly" id="cup10602_createdBy" value="Park, JungIl" readonly="readonly">
+													<input type="text" name="cup10602_createdBy" class="inp Readonly" id="cup10602_createdBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 										</dd>
@@ -430,10 +438,10 @@
 										<dd>
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10602_modifiedDate" class="inp Readonly" id="cup10602_modifiedDate" value="12-14-2018" readonly />
+													<input type="text" name="cup10602_modifiedDate" class="inp Readonly" id="cup10602_modifiedDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10602_modifiedTime" class="inp Readonly" id="cup10602_modifiedTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="cup10602_modifiedTime" class="inp Readonly" id="cup10602_modifiedTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<div class="ele">
@@ -441,7 +449,7 @@
 													<div class="thumb">
 														<img src="../static/images/common/icon/icon_person_small.png" alt="" name="cup10602_modifiedByPhotoUrl" id="cup10602_modifiedByPhotoUrl" />
 													</div>
-													<input type="text" name="cup10602_modifiedBy" class="inp Readonly" id="cup10602_modifiedBy" value="Park, JungIl" readonly="readonly">
+													<input type="text" name="cup10602_modifiedBy" class="inp Readonly" id="cup10602_modifiedBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 										</dd>
@@ -454,7 +462,7 @@
 											<div class="ele">
 												<div class="inputBox schType ty1">
 													<div class="inner">
-														<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
+														<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly" tabindex="-1">
 														<input type="text" name="cup10602_onlineDefaultPolicy" class="inp autoSch ty1 name" id="cup10602_onlineDefaultPolicy" placeholder="">
 														<button type="button" class="inpReset"></button>
 													</div>
