--- a/htmlList.html
+++ b/htmlList.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> 코딩리스트 </title>
+    <title> 코딩리스트 : OPUS - 사용자</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" />
@@ -129,7 +129,8 @@
                         <td></td>
                         <td><a target="_blank" href="common/head.html">head.html</a></td>
                         <td class="red">
-							2019-02-07 수정		
+							2019-02-07 수정 <br />
+							2019-02-20 수정
 						</td>
                     </tr>
 					<tr>
@@ -138,7 +139,8 @@
                         <td><a target="_blank" href="common/header.html">header.html</a></td>
                         <td class="red">
 							2019-02-07 수정 <br />
-							2019-02-19 수정
+							2019-02-19 수정 <br />
+							2019-02-21 수정
 						</td>
                     </tr>
 					<tr>
@@ -187,9 +189,14 @@
                         <td>Sign In</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10001.html">cup10001.html</a></td>
-                        <td class="red">
-							2019-01-29 수정 <br />
-							2019-02-01 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-01-29 수정 <br />
+								2019-02-01 수정 <br />
+								2019-02-20 수정 <br />
+								2019-02-21 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
@@ -197,79 +204,116 @@
                         <td></td>
                         <td><a target="_blank" href="login/cup10002.html">cup10002.html</a></td>
                         <td>
-							제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정 <br />
-							<span class="red">2019-01-29 수정</span> <br />
-							<span class="red">2019-02-01 수정</span>
+							- 관리자 페이지와 같이 사용 <br />
+							- 제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정
+							<div class="red">
+								2019-01-29 수정 <br />
+								2019-02-01 수정 <br />
+								2019-02-20 수정 <br />
+								2019-02-21 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>신규가입</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10003.html">cup10003.html</a></td>
-                        <td class="red">
-							2019-01-29 수정 <br />
-							2019-02-01 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-01-29 수정 <br />
+								2019-02-01 수정 <br />
+								2019-02-20 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경요청</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10004.html">cup10004.html</a></td>
-                        <td class="red">
-							2019-02-01 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-01 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10005.html">cup10005.html</a></td>
-                        <td class="red">
-							2019-02-01 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-01 수정 <br />
+								2019-02-20 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>신규가입 확인(메일)</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10010.html">cup10010.html</a></td>
-                        <td class="red">
-							2019-01-29 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-01-29 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>신규가입 확인</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10006.html">cup10006.html</a></td>
-                        <td class="red">
-							2019-02-01 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-01 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>신규가입 요청 확인</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10007.html">cup10007.html</a></td>
-                        <td class="red">
-							2019-02-01 수정
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-01 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>잊은암호변경 확인(메일)</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10008.html">cup10008.html</a></td>
-                        <td class="red"></td>
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>잊은암호변경 확인</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10009.html">cup10009.html</a></td>
-                        <td class="red">
-							2019-02-01 수정
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-01 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
                         <td>Home</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10011.html">cup10011.html</a></td>
-                        <td class="red"></td>
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-20 수정
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>Home-게시물</td>
@@ -283,7 +327,9 @@
                         <td>Profile</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10101.html">cup10101.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-20 수정
+						</td>
                     </tr>
 					<tr>
                         <td>암호 변경 - <span class="red">[ 팝업 ]</span></td>
@@ -324,7 +370,8 @@
                         <td>
 							관리자 페이지와 같이 사용
 							<div class="red">
-								2019-02-12  수정
+								2019-02-12 수정 <br />
+								2019-02-20 수정
 							</div>
 						</td>
                     </tr>
@@ -334,7 +381,9 @@
                         <td><a target="_blank" href="Organization_a/cup10202.html">cup10202.html</a></td>
                         <td>
 							관리자 페이지와 같이 사용
-							<div class="red"></div>
+							<div class="red">
+								2019-02-20 수정
+							</div>
 						</td>
                     </tr>
 					<tr>
@@ -368,8 +417,13 @@
                         <th>빌링</th>
                         <td>정기과금목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td><a target="_blank" href="billing_a/cup10603.html">cup10603.html</a></td>
+						<td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-20 수정
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>승인과금</td>
@@ -426,7 +480,9 @@
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00002.html">cup00002.html</a></td>
                         <td class="red">
-							2019-02-01 수정
+							2019-02-01 수정 <br />
+							2019-02-20 수정 <br />
+							2019-02-21 수정
 						</td>
                     </tr>
 					<tr>
@@ -434,7 +490,8 @@
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00003.html">cup00003.html</a></td>
                         <td class="red">
-							2019-02-01 수정
+							2019-02-01 수정 <br />
+							2019-02-20 수정
 						</td>
                     </tr>
 					<tr>
@@ -444,7 +501,9 @@
                         <td class="red">
 							2019-01-29 수정 <br />
 							2019-02-01 수정 <br />
-							2019-02-12 수정
+							2019-02-12 수정 <br />
+							2019-02-20 수정 <br />
+							2019-02-21 수정
 						</td>
                     </tr>
 					<tr>
@@ -453,7 +512,8 @@
                         <td><a target="_blank" href="homepage/cup00006.html">cup00006.html</a></td>
                         <td class="red">
 							2019-02-01 수정 <br />
-							2019-02-12 수정
+							2019-02-12 수정 <br />
+							2019-02-21 수정
 						</td>
                     </tr>
 					<tr>
