--- a/login/cup10003.html
+++ b/login/cup10003.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -44,7 +43,9 @@
 						<dt id="i10003_nameLb">Name</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="text" name="i10003_name" class="inp Mandate" id="i10003_name" placeholder="Your Name" maxlength="50">
+								<!-- 2019-02-20 수정 -->
+								<input type="text" name="i10003_name" class="inp Mandate inputFocus" id="i10003_name" placeholder="Your Name" maxlength="50">
+								<!--// 2019-02-20 수정 -->
 								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
@@ -71,7 +72,9 @@
 						</dd>
 					</dl>
 					<div class="txtBox">
-						<p class="alertMessage" id="i10003_shortPasswordLb">Password must contain at least 6 characters, including alphabets and numbers.</p>
+						<!-- 2019-02-21 수정 -->
+						<p class="alertMessage" id="i10003_shortPasswordLb">Password must contain at least 8 characters. At least one alphabet and one number should be included.</p>
+						<!--// 2019-02-21 수정 -->
 					</div>
 					<dl class="inpItem">
 						<dt id="i10003_confirmPasswordLb">Confirm Password</dt>
@@ -92,7 +95,7 @@
 						<dd>
 							<div class="inputBox schType ty1">
 								<div class="inner">
-									<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
+									<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly" tabindex="-1">
 									<input type="text" name="i10003_company" class="inp autoSch ty1 name Mandate" id="i10003_company" placeholder="Type Company Name"> <!-- 2019-01-29 클래스 추가 -->
 									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
@@ -124,7 +127,9 @@
 						<dd>
 							<div class="inputBox full">
 								<!-- 2019-01-29 클래스 추가 -->
-								<input type="text" name="i10003_address2" class="inp" id="i10003_address2" placeholder="Type Department Name" maxlength="50">
+								<!-- 2019-02-21 수정 -->
+								<input type="text" name="i10003_address2" class="inp" id="i10003_address2" placeholder="Type Apartment, Suite, Unit, Building, Floor" maxlength="50">
+								<!--// 2019-02-21 수정 -->
 								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
@@ -134,7 +139,7 @@
 						<dd>
 							<div class="inputBox schType ty2">
 								<div class="inner">
-									<input type="text" class="inp autoSch ty2 code Readonly" readonly="readonly">
+									<input type="text" class="inp autoSch ty2 code Readonly" readonly="readonly" tabindex="-1">
 									<input type="text" name="i10003_city" class="inp autoSch ty2 name Mandate" id="i10003_city" placeholder="Type City"><!-- 2019-01-29 클래스 추가 -->
 									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
@@ -146,7 +151,7 @@
 						<dd>
 							<div class="inputBox schType ty2">
 								<div class="inner">
-									<input type="text" class="inp autoSch ty3 code Readonly" readonly="readonly">
+									<input type="text" class="inp autoSch ty3 code Readonly" readonly="readonly" tabindex="-1">
 									<input type="text" name="i10003_state" class="inp autoSch ty3 name" id="i10003_state" placeholder="Type State">
 									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
