--- a/service_a/cup10702.html
+++ b/service_a/cup10702.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -58,6 +57,7 @@
 							<li><a href="#" class="ty2">Guide</a></li>
 							<li><a href="#" class="ty3">Learn &amp; Support</a></li>
 							<li><a href="#" class="ty4">Shortcut Key (Tab+s)</a></li>
+							<li><a href="#" class="logout">Logout</a></li>
 						</ul>
 						<button type="button" class="btn close">Close</button>
 					</div>
@@ -76,7 +76,7 @@
 									<li><a href="#" data-name="OrganizationList">Organization List</a></li>
 									<li><a href="#" data-name="Organization">Organization</a></li>
 								</ul>
-								<button type="button" class="clip on"></button>
+								<button type="button" class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit ty2">Subscription</div>
@@ -163,7 +163,7 @@
 								<!-- 2019-01-30 수정 -->
 								<div class="srvNum" id="cup10702_serviceIDLb">
 									<div class="inputBox inpNone">
-										<input type="text" name="" class="inp" id="" readonly="readonly" value="S10000001">
+										<input type="text" name="" class="inp" id="" readonly="readonly" value="S10000001" tabindex="-1">
 									</div>
 								</div>
 								<!--// 2019-01-30 수정 -->
@@ -188,7 +188,7 @@
 											<dl class="inpItem">
 												<dt id="cup10702_serviceTypeLb">Service Type</dt>
 												<dd>
-													<div class="comboBox">
+													<div class="comboBox inputFocus">
 														<select class="comboSelect" id="cup10702_serviceType" placeholder="Select a Type">
 															<option value="">Select a Type</option>
 															<option value="T-Shirt">T-Shirt</option>
@@ -252,7 +252,7 @@
 													<!-- 2019-02-11 수정 -->
 													<div class="inputBox schType ty1">
 														<div class="inner">
-															<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
+															<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly" tabindex="-1">
 															<input type="text" name="cup10702_suggestedTariff" class="inp autoSch ty1 name" id="cup10702_suggestedTariff" placeholder="Select a Tariff">
 															<button type="button" class="inpReset"></button>
 														</div>
@@ -300,10 +300,10 @@
 											<!-- 2019-01-31 수정 -->
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10702_createDate" class="inp Readonly" id="cup10702_createDate" value="12-14-2018" readonly />
+													<input type="text" name="cup10702_createDate" class="inp Readonly" id="cup10702_createDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10702_createTime" class="inp Readonly" id="cup10702_createTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="cup10702_createTime" class="inp Readonly" id="cup10702_createTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<div class="ele">
@@ -313,7 +313,7 @@
 														<img src="../static/images/common/icon/icon_person_small.png" alt="" />
 													</div>
 													<!--// 2019-02-01 수정 -->
-													<input type="text" name="cup10702_createdBy" class="inp Readonly" id="cup10702_createdBy" value="Park, JungIl" readonly="readonly">
+													<input type="text" name="cup10702_createdBy" class="inp Readonly" id="cup10702_createdBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<!--// 2019-01-31 수정 -->
@@ -326,10 +326,10 @@
 											<!-- 2019-01-31 수정 -->
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10702_modifiedDate" class="inp Readonly" id="cup10702_modifiedDate" value="12-14-2018" readonly />
+													<input type="text" name="cup10702_modifiedDate" class="inp Readonly" id="cup10702_modifiedDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10702_modifiedTime" class="inp Readonly" id="cup10702_modifiedTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="cup10702_modifiedTime" class="inp Readonly" id="cup10702_modifiedTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<div class="ele">
@@ -339,7 +339,7 @@
 														<img src="../static/images/common/icon/icon_person_small.png" alt="" />
 													</div>
 													<!--// 2019-02-01 수정 -->
-													<input type="text" name="cup10702_modifiedBy" class="inp Readonly" id="cup10702_modifiedBy" value="Park, JungIl" readonly="readonly">
+													<input type="text" name="cup10702_modifiedBy" class="inp Readonly" id="cup10702_modifiedBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<!--// 2019-01-31 수정 -->
