--- a/service_a/cup10703.html
+++ b/service_a/cup10703.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -58,6 +57,7 @@
 							<li><a href="#" class="ty2">Guide</a></li>
 							<li><a href="#" class="ty3">Learn &amp; Support</a></li>
 							<li><a href="#" class="ty4">Shortcut Key (Tab+s)</a></li>
+							<li><a href="#" class="logout">Logout</a></li>
 						</ul>
 						<button type="button" class="btn close">Close</button>
 					</div>
@@ -76,7 +76,7 @@
 									<li><a href="#" data-name="OrganizationList">Organization List</a></li>
 									<li><a href="#" data-name="Organization">Organization</a></li>
 								</ul>
-								<button type="button" class="clip on"></button>
+								<button type="button" class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit ty2">Subscription</div>
@@ -161,25 +161,24 @@
 								<ul class="itemList1">
 									<li>
 										<dl class="inpItem">
-											<dt id="">Keyword</dt>
+											<!-- 2019-02-20 수정 -->
+											<dt id="i10703-keywordLb">Keyword</dt>
 											<dd>
-												<!-- 2019-02-12 수정 -->
 												<div class="inputBox keyword">
-													<!--// 2019-02-12 수정 -->
-													<div class="inner">
-														<input type="text" name="" class="inp autoSch keyword name" id="" placeholder="">
-														<button type="button" class="inpReset"></button>
-													</div>
+													<input type="text" name="i10703_keyword" class="inp inputFocus" id="i10703_keyword" placeholder="ID, Name" maxlength="50">
+													<button type="button" class="inpReset"></button>
 												</div>
 											</dd>
+											<!--// 2019-02-20 수정 -->
 										</dl>
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt>Customer Type</dt>
+											<!-- 2019-02-20 수정 -->
+											<dt id="i10703-customerTypeLb">Customer Type</dt>
 											<dd>
 												<div class="comboBox">
-													<select class="comboSelect" id="" placeholder="Select a Type">
+													<select class="comboSelect" id="i10703-customerType" placeholder="Select a Type">
 														<option value="">Select a Type</option>
 														<option value="T-Shirt">T-Shirt</option>
 														<option value="T-Shirt Woman">T-Shirt Woman</option>
@@ -188,16 +187,19 @@
 													</select>
 												</div>
 											</dd>
+											<!--// 2019-02-20 수정 -->
 										</dl>
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt>Creation</dt>
+											<!-- 2019-02-20 수정 -->
+											<dt id="i10703-creationLb">Creation</dt>
 											<dd>
 												<div class="inputBox Edit_date">
-													<input type="text" name="daterange" class="inp daterange" id="" placeholder="From - To" />
+													<input type="text" name="daterange" class="inp daterange" id="i10703_creation" placeholder="From - To" />
 												</div>
 											</dd>
+											<!--// 2019-02-20 수정 -->
 										</dl>
 									</li>
 								</ul>
@@ -208,7 +210,7 @@
 								<!-- 2019-02-12 수정 -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10703_filterStatus">
 									<i class="filter icon"></i>
-									<span class="text">Filter Posts</span>
+									<span class="text">Filter Status</span>
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
@@ -259,7 +261,12 @@
 									</div>
 								</div>
 								<!--// 2019-02-12 수정 -->
-								<button type="button" class="btn" id="i10703_addTariff">Add Tariff</button>
+								<!-- 2019-02-21 수정 -->
+								<div class="btns">
+									<button type="button" class="btn" id="i10703-copyTariff">Copy Tariff</button>
+									<button type="button" class="btn" id="i10703_addTariff">Add Tariff</button>
+								</div>
+								<!--// 2019-02-21 수정 -->
 							</div>
 							<div class="ibsheetDiv">
 								ibsheet
