--- a/user/cup10101.html
+++ b/user/cup10101.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -58,6 +57,7 @@
 							<li><a href="#" class="ty2">Guide</a></li>
 							<li><a href="#" class="ty3">Learn &amp; Support</a></li>
 							<li><a href="#" class="ty4">Shortcut Key (Tab+s)</a></li>
+							<li><a href="#" class="logout">Logout</a></li>
 						</ul>
 						<button type="button" class="btn close">Close</button>
 					</div>
@@ -76,7 +76,7 @@
 									<li><a href="#" data-name="OrganizationList">Organization List</a></li>
 									<li><a href="#" data-name="Organization">Organization</a></li>
 								</ul>
-								<button type="button" class="clip on"></button>
+								<button type="button" class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit ty2">Subscription</div>
@@ -160,7 +160,7 @@
 							<div class="serviceCode">
 								<div class="srvNum" id="">
 									<div class="inputBox inpNone">
-										<input type="text" name="i10101-userIdLb" class="inp" id="i10101-userIdLb" readonly="readonly" value="U10000001">
+										<input type="text" name="i10101-userIdLb" class="inp" id="i10101-userIdLb" readonly="readonly" value="U10000001" tabindex="-1">
 									</div>
 								</div>
 							</div>
@@ -192,7 +192,9 @@
 												<dt id="i10101-displayNameLb">Display Name</dt>
 												<dd>
 													<div class="inputBox">
-														<input type="text" name="i10101-displayName" class="inp Mandate" id="i10101-displayName" maxlength="50">
+														<!-- 2019-02-20 수정 -->
+														<input type="text" name="i10101-displayName" class="inp Mandate inputFocus" id="i10101-displayName" maxlength="50">
+														<!--// 2019-02-20 수정 -->
 														<button type="button" class="inpReset"></button>
 													</div>
 													<div class="tooltip">
@@ -235,7 +237,7 @@
 												<dt id="i10101-eMailLb">Email</dt>
 												<dd>
 													<div class="inputBox">
-														<input type="text" name="i10101-eMail" class="inp Readonly" id="i10101-eMail" readonly="readonly">
+														<input type="text" name="i10101-eMail" class="inp Readonly" id="i10101-eMail" readonly="readonly" tabindex="-1">
 													</div>
 													<div class="tooltip">
 														<div class="tips" id="i10101-eMailInfo">
@@ -369,10 +371,10 @@
 										<dd>
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="i10101-createDate" class="inp Readonly" id="i10101-createDate" value="12-14-2018" readonly />
+													<input type="text" name="i10101-createDate" class="inp Readonly" id="i10101-createDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="i10101-createTime" class="inp Readonly" id="i10101-createTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="i10101-createTime" class="inp Readonly" id="i10101-createTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 										</dd>
@@ -382,10 +384,10 @@
 										<dd>
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="i10101-modifiedDate" class="inp Readonly" id="i10101-modifiedDate" value="12-14-2018" readonly />
+													<input type="text" name="i10101-modifiedDate" class="inp Readonly" id="i10101-modifiedDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="i10101-modifiedTime" class="inp Readonly" id="i10101-modifiedTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="i10101-modifiedTime" class="inp Readonly" id="i10101-modifiedTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 										</dd>
