--- a/common/header.html
+++ b/common/header.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -58,6 +57,7 @@
 						<li><a href="#" class="ty2">Guide</a></li>
 						<li><a href="#" class="ty3">Learn &amp; Support</a></li>
 						<li><a href="#" class="ty4">Shortcut Key (Tab+s)</a></li>
+						<li><a href="#" class="logout">Logout</a></li>
 					</ul>
 					<button type="button" class="btn close">Close</button>
 				</div>
