--- a/common/nav.html
+++ b/common/nav.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -44,7 +43,7 @@
 						<li><a href="#" data-name="OrganizationList">Organization List</a></li>
 						<li><a href="#" data-name="Organization">Organization</a></li>
 					</ul>
-					<button type="button" class="clip on"></button>
+					<button type="button" class="clip"></button>
 				</li>
 				<li>
 					<div class="gnbTit ty2">Subscription</div>
