--- a/homepage/cup00002.html
+++ b/homepage/cup00002.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -42,16 +41,16 @@
 					<dl class="inpItem">
 						<dt id="i00002_basicLb">Basic</dt>
 						<dd class="tr">
-							<!-- 2019-02-01 수정 -->
+							<!-- 2019-02-21 수정 -->
 							<div class="inputBox count">
 								<button type="button" class="plus"><span>Plus</span></button>
-								<input type="number" name="i00002_basic" class="inp Edit_Count" id="i00002_basic" min="0" value='15'>
+								<input type="number" name="i00002_basic" class="inp Edit_Count inputFocus" id="i00002_basic" min="0" placeholder="" maxlength="50" @@etc>
 								<button type="button" class="minus"><span>Minus</span></button>
 							</div>
-							<!--// 2019-02-01 수정 -->
+							<!--// 2019-02-21 수정 -->
 							<div class="inputBox readonly amount">
-								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-								<input type="text" name="i00002_basicPrice" class="inp Readonly" id="i00002_basicPrice" readonly="readonly" value="100.00">
+								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD" tabindex="-1">
+								<input type="text" name="i00002_basicPrice" class="inp Readonly" id="i00002_basicPrice" readonly="readonly" value="100.00" tabindex="-1">
 							</div>
 						</dd>
 					</dl>
@@ -61,8 +60,8 @@
 						<dd class="tr">
 							<span class="totalVal"><span class="bold" id="i00002_monthlyTotal">15</span></span>
 							<div class="inputBox readonly amount">
-								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-								<input type="text" name="i00002_totalPrice" class="inp Readonly" id="i00002_totalPrice" readonly="readonly" value="1,500.00">
+								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD" tabindex="-1">
+								<input type="text" name="i00002_totalPrice" class="inp Readonly" id="i00002_totalPrice" readonly="readonly" value="1,500.00" tabindex="-1">
 							</div>
 						</dd>
 					</dl>
