--- a/homepage/cup00003.html
+++ b/homepage/cup00003.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -42,15 +41,17 @@
 					<dl class="inpItem">
 						<dt id="i00003_platformTypeLb">Platform Type</dt>
 						<dd class="tr">
-							<div class="comboBox">
+							<!-- 2019-02-20 수정 -->
+							<div class="comboBox inputFocus">
 								<select class="comboSelect" id="i00003_platformType" placeholder="Select a Type">
 									<option value="">Select a Type</option>
 									<option value="Share">Share</option>
 								</select>
 							</div>
+							<!--// 2019-02-20 수정 -->
 							<div class="inputBox readonly amount">
-								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-								<input type="text" name="i00003_platformPrice" class="inp Readonly" id="i00003_platformPrice" readonly="readonly" value="100.00">
+								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD" tabindex="-1">
+								<input type="text" name="i00003_platformPrice" class="inp Readonly" id="i00003_platformPrice" readonly="readonly" value="100.00" tabindex="-1">
 							</div>
 						</dd>
 					</dl>
@@ -65,8 +66,8 @@
 							<dt id="i00003_monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
 							<dd class="tr">
 								<div class="inputBox readonly amount">
-									<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-									<input type="text" name="i00003_totalPrice" class="inp Readonly" id="i00003_totalPrice" readonly="readonly" value="1,500.00">
+									<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD" tabindex="-1">
+									<input type="text" name="i00003_totalPrice" class="inp Readonly" id="i00003_totalPrice" readonly="readonly" value="1,500.00" tabindex="-1">
 								</div>
 							</dd>
 						</dl>
