--- a/login/cup10001.html
+++ b/login/cup10001.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -43,10 +42,18 @@
 						<div class="idArea">
 							<div class="inputBox full">
 								<!-- 2019-01-29 클래스 추가 -->
-								<input type="text" name="i10001_userId" class="inp Mandate" id="i10001_userId" maxlength="50" placeholder="Email or User ID" />
+								<!-- 2019-02-20 수정 -->
+								<input type="text" name="i10001_userId" class="inp Mandate inputFocus" id="i10001_userId" maxlength="50" placeholder="Email or User ID" />
+								<!--// 2019-02-20 수정 -->
 								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</div>
+						<!-- 2019-02-21 추가 -->
+						<div class="txtBox">
+							<p class="alertMessage" id="i10001_userIdInfoLb">Your ID has not been activated. Click here to get a new activation Email.</p>
+							<p class="alertMessage" id="i10001_userIdInfoLb">Your ID is not found. Please, sign up using your Email.</p>
+						</div>
+						<!--// 2019-02-21 추가 -->
 						<div class="loginCheck">
 							<div class="checkbox">
 								<input type="checkbox" name="i10001_rememberMe" id="i10001_rememberMe"><label for="i10001_rememberMe" id="i10001_rememberMeLb">Remember Me</label>
