--- a/login/cup10005.html
+++ b/login/cup10005.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -48,7 +47,9 @@
 								<dd>
 									<div class="inputBox full">
 										<!-- 2019-01-29 클래스 수정 -->
-										<input type="password" name="i10005_password" class="inp Mandate pwinp" id="i10005_password" placeholder="Type Password" maxlength="50">
+										<!-- 2019-02-20 수정 -->
+										<input type="password" name="i10005_password" class="inp Mandate pwinp inputFocus" id="i10005_password" placeholder="Type Password" maxlength="50">
+										<!--// 2019-02-20 수정 -->
 										<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 									</div>
 									<p class="alertMessage" id="i10005_shortPasswordLb">Password must contain at least 8 characters. At least one alphabet and one number should be included.</p>
