--- a/login/cup10011.html
+++ b/login/cup10011.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -58,6 +57,7 @@
 							<li><a href="#" class="ty2">Guide</a></li>
 							<li><a href="#" class="ty3">Learn &amp; Support</a></li>
 							<li><a href="#" class="ty4">Shortcut Key (Tab+s)</a></li>
+							<li><a href="#" class="logout">Logout</a></li>
 						</ul>
 						<button type="button" class="btn close">Close</button>
 					</div>
@@ -76,7 +76,7 @@
 									<li><a href="#" data-name="OrganizationList">Organization List</a></li>
 									<li><a href="#" data-name="Organization">Organization</a></li>
 								</ul>
-								<button type="button" class="clip on"></button>
+								<button type="button" class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit ty2">Subscription</div>
@@ -157,6 +157,66 @@
 					<form action="">
 						<div class="layout Layout_List">
 							<h2 class="tit" id="i10011_homeLb">Welcome to OPUS Logistics!</h2>
+							<!-- 2019-02-20 추가 -->
+							<h3 class="tit" id="i10010-newSubscriptionLb">New Subscription</h3>
+							<div class="ibsheepTop">
+								<div class="ui floating dropdown labeled icon button filter" id="i10010-filterStatus">
+									<i class="filter icon"></i>
+									<span class="text">Filter Status</span>
+									<div class="menu">
+										<div class="ui icon search input">
+											<i class="search icon"></i>
+											<input type="text" placeholder="Filter Status">
+										</div>
+										<div class="header">
+											<i class="tags icon"></i>
+											Tag Label
+										</div>
+										<div class="scrolling menu">
+											<div class="item">
+												<div class="ui red empty circular label"></div>
+												Important
+											</div>
+											<div class="item">
+												<div class="ui blue empty circular label"></div>
+												Announcement
+											</div>
+											<div class="item">
+												<div class="ui black empty circular label"></div>
+												Cannot Fix
+											</div>
+											<div class="item">
+												<div class="ui purple empty circular label"></div>
+												News
+											</div>
+											<div class="item">
+												<div class="ui orange empty circular label"></div>
+												Enhancement
+											</div>
+											<div class="item">
+												<div class="ui empty circular label"></div>
+												Change Declined
+											</div>
+											<div class="item">
+												<div class="ui yellow empty circular label"></div>
+												Off Topic
+											</div>
+											<div class="item">
+												<div class="ui pink empty circular label"></div>
+												Interesting
+											</div>
+											<div class="item">
+												<div class="ui green empty circular label"></div>
+												Discussion
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="ibsheetDiv">
+								ibsheet
+							</div>
+							<!--// 2019-02-20 추가 -->
 							<h3 class="tit" id="i10011-noticeLb">Notice</h3>
 							<div class="ibsheetDiv">
 								ibsheet
