--- a/site_a/cup10802.html
+++ b/site_a/cup10802.html
@@ -32,50 +32,75 @@
 </head>
 
 <body>
-	<section class="layerPopup">
+	<section class="layerPopup wide">
 		<div class="inner">
-			<h1 class="popupTitle" id="i10102-changePasswordLb">Change Password</h1>
+			<h1 class="popupTitle" id="">Notice</h1>
 			<div class="layerContent">
+
 				<dl class="inpItem">
-					<dt id="i10102-oldPasswordLb">Old Password</dt>
+					<dt id="">Category</dt>
 					<dd>
-						<div class="inputBox">
-							<input type="text" name="i10102-oldPassword" class="inp pwinp inputFocus" id="i10102-oldPassword" placeholder="" />
+						<div class="comboBox Mandate inputFocus">
+							<select class="comboSelect" id="" placeholder="Select a Category">
+								<option value="">Select a Type</option>
+								<option value="T-Shirt">T-Shirt</option>
+								<option value="T-Shirt Woman">T-Shirt Woman</option>
+								<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+								<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+							</select>
+						</div>
+					</dd>
+				</dl>
+				<dl class="inpItem">
+					<dt id="">Title</dt>
+					<dd>
+						<div class="inputBox full">
+							<input type="text" name="" class="inp Mandate" id="" placeholder="" maxlength="80">
 							<button type="button" class="inpReset"></button>
 						</div>
 					</dd>
 				</dl>
-				<div class="txtBox">
-					<p class="alertMessage" id="i10102-wrongPasswordLb">Wrong Password. Please, Input the password again.</p>
+
+				<h3 class="tit">Contents</h3>
+				<div class="editorWrap">
+					<div id="editor"></div>
 				</div>
+
 				<dl class="inpItem">
-					<dt id="i10102-newPasswordLb">New Password</dt>
+					<dt id="">Select Files</dt>
 					<dd>
-						<div class="inputBox">
-							<input type="text" name="i10102-newPassword" class="inp pwinp" id="i10102-newPassword" placeholder="" />
-							<button type="button" class="inpReset"></button>
+						d
+					</dd>
+				</dl>
+				<dl class="inpItem">
+					<dt id="">Posted on</dt>
+					<dd>
+						<div class="inputBox Edit_date single">
+							<input type="text" name="" class="inp Readonly" id="" value="12-14-2018" readonly="readonly" tabindex="-1">
+						</div>
+						<div class="inputBox Edit_Time readonly">
+							<input type="text" name="" class="inp Readonly" id="" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 						</div>
 					</dd>
 				</dl>
-				<div class="txtBox">
-					<p class="alertMessage" id="i10102-shortPasswordLb">Password must contain at least 8 characters. At least one alphabet and one number should be included.</p>
-				</div>
 				<dl class="inpItem">
-					<dt id="i10102-confirmPasswordLb">Confirm Password</dt>
+					<dt id="">Posted by</dt>
 					<dd>
-						<div class="inputBox">
-							<input type="text" name="i10102-confirmPassword" class="inp pwinp" id="i10102-confirmPassword" placeholder="" />
-							<button type="button" class="inpReset">The passwords you entered don’t match.</button>
+						<div class="inputBox Edit_User">
+							<div class="thumb">
+								<img src="../static/images/common/icon/icon_person_small.png" alt="" name="" id="" />
+							</div>
+							<input type="text" name="" class="inp Readonly" id="" value="Park, JungIl" readonly="readonly" tabindex="-1">
 						</div>
 					</dd>
 				</dl>
-				<div class="txtBox">
-					<p class="alertMessage" id="i10102-misconfirmPasswordLb">The passwords you entered don’t match.</p>
-				</div>
 			</div>
 		</div>
 		<div class="layerBtns">
-			<button type="button" class="btn basic">Change Password</button>
+			<button type="button" class="btn basic" id="">Save</button>
+			<button type="button" class="btn basic" id="">Delete</button>
+			<button type="button" class="btn plus" id="">Add</button>
+			<button type="button" class="btn minus" id="">Delete</button>
 		</div>
 		<button type="button" class="btn close">Close</button>
 	</section>
